<resources>
    <string name="app_name">Market</string>

    <string name="http_error">Ошибка при отправке данных</string>
    <string name="load_error">Ошибка при отправке запроса</string>
    <string name="repeat">Повторить</string>
    <string name="error">Ошибка</string>
    <string name="attention">Внимание</string>
    <string name="success">Готово</string>
    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="app_exi_question">Вы действительно хотите выйти из приложения ?</string>

    <!--Errors-->
    <string name="message_error_connect">Отсутствует соединение с интернетом</string>
    <string name="message_error_default">Сервер не доступен. Попробуйте позже.</string>
    <string name="message_error_socket">Слишком медленный интернет. Попробуйте другой.</string>
    <string name="message_technical_works">В данный момент на сервере проводятся технические работы</string>
    <string name="message_universal_error">Что-то пошло не так. Попробуйте позже</string>

    <!-- Sign in -->
    <string name="sign_in_screen_title">Вход</string>
    <string name="sign_in_login">Логин</string>
    <string name="sign_in_password">Пароль</string>
    <string name="sign_in_sign_in">Войти</string>
    <string name="sign_in_sign_up">Регистрация</string>
    <string name="sign_in_success">Вы успешно авторизовались</string>
    <string name="sign_in_error">Неверный логин или пароль</string>

    <!-- Sign up -->
    <string name="sign_up_screen_title">Регистрация</string>
    <string name="sign_up_first_name">Имя</string>
    <string name="sign_up_last_name">Фамилия</string>
    <string name="sign_up_email">E-mail</string>
    <string name="sign_up_login">Логин</string>
    <string name="sign_up_password">Пароль</string>
    <string name="sign_up_repeat_password">Повторите пароль</string>
    <string name="sign_up_sign_up">Зарегестрироваться</string>
    <string name="sign_up_sign_up_success">Вы успешно зарегестрированы</string>
    <string name="sign_up_password_error">Введенные пароли не совпадают</string>
    <string name="sign_up_login_error">Введенный логин уже зарегестрирован</string>
    <string name="sign_up_email_error">Введенный email уже зарегестрирован</string>

    <!-- Category -->
    <string name="category_screen_title">Категории</string>

    <!-- Product list -->
    <string name="product_list_screen_title">Продукты</string>
    <string name="product_list_empty">Список продуктов пуст</string>

    <!-- Product detail -->
    <string name="product_detail_screen_title">Подробно</string>
    <string name="product_name">Название</string>
    <string name="product_price">Цена</string>
    <string name="product_count">Количество</string>
    <string name="product_more_detail">Подробнее</string>

    <!-- Basket -->
    <string name="basket_menu_item">Корзина</string>
    <string name="basket_screen_title">Корзина</string>
    <string name="basket_product_list_empty">Корзина пуста</string>

</resources>
