<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin_double_half_fourth"
        android:layout_marginRight="@dimen/activity_margin"
        android:hint="@string/sign_up_first_name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:hint="@string/sign_up_last_name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:hint="@string/sign_up_email" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:hint="@string/sign_up_login" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:hint="@string/sign_up_password"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:hint="@string/sign_up_repeat_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin_double"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin_double"
        android:text="@string/sign_up_sign_up" />

</LinearLayout>