<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_product_status"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/activity_margin_double"
            android:layout_marginRight="@dimen/activity_margin_double"
            android:src="@drawable/ic_add" />

        <TextView
            android:id="@+id/tv_product_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginRight="90dp"
            android:text="@string/product_name"
            android:textColor="@color/suvaGrey"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_product_name_title"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin_quarter"
            android:layout_marginRight="90dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            tools:text="Название" />

        <TextView
            android:id="@+id/tv_product_price_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_product_name"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:text="@string/product_price"
            android:textColor="@color/suvaGrey"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_product_price_title"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin_quarter"
            android:layout_marginRight="@dimen/activity_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            tools:text="10000 $" />

        <TextView
            android:id="@+id/tv_product_count_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_product_price"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:text="@string/product_count"
            android:textColor="@color/suvaGrey"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_product_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_product_count_title"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin_quarter"
            android:layout_marginRight="@dimen/activity_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            tools:text="2" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_load"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:theme="@style/ProgressBarTheme"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_error_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:src="@drawable/ic_error" />

        <TextView
            android:id="@+id/tv_error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_double"
            android:text="@string/error"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_24" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_double_half_fourth"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin_double_half_fourth"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            tools:text="Произошла ошибка" />

        <Button
            android:id="@+id/btn_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_double"
            android:layout_marginTop="@dimen/activity_margin_double"
            android:layout_marginRight="@dimen/activity_margin_double"
            android:background="@drawable/shape_blue_button"
            android:text="@string/repeat"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>